تغيير درجة اللون الغامق وتغير حجم الخط

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,11 +3,11 @@ $colors: (
     "warning":   #ff7f50,
     "success":   #2ed573,
     "danger":    #ff4757,
-    "dark":      #011c1a,
+    "dark":      #000000,
     "light":     #a4b0be,
     "info":      #1e90ff
 );
 
-$fontSize: 13px;
+$fontSize: 15px;
 
 $borderColor: #e5e7eb;
