--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -11,8 +11,9 @@
 
 body {
     font: {
-        size: 14px;
+        size: $fontSize;
         family: "Poppins", "Changa", sans-serif;
+        weight: 500;
     }
     background-color: whitesmoke;
 }
