--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <!-- .header-search -->
-                <div class="col-lg-5 align-self-center">
+                <div class="col-lg-6 align-self-center">
                     <div class="header-search dropdown">
                         <button type="button" class="search-category-button" data-bs-toggle="dropdown">
                             All Categories
@@ -102,7 +102,7 @@
 
                         <form action="/" method="get">
                             <input type="text" class="form-control" name="search" placeholder="Search your course">
-                            <button type="button" class="btn btn-primary">
+                            <button type="button" class="button button-primary rounded-pill">
                                 Search
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     class="ms-2">
@@ -114,22 +114,15 @@
                     </div>
                 </div>
 
-                <!-- .social-links -->
-                <div class="col-lg-2 align-self-center">
-                    <div class="social-links">
-                        @@include('components/socials.html')
-                    </div>
-                </div>
-
                 <!-- .header=auth-buttons -->
-                <div class="col-lg-3 align-self-center">
+                <div class="col-lg-4 align-self-center">
                     <div class="header-auth-buttons">
-                        <a href="register.html" class="btn btn-success">Register 
+                        <a href="register.html" class="button button-success rounded-pill">Register 
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" class="ms-2">
                                 <path fill="currentColor" d="M15 4a4 4 0 0 0-4 4a4 4 0 0 0 4 4a4 4 0 0 0 4-4a4 4 0 0 0-4-4m0 1.9a2.1 2.1 0 1 1 0 4.2A2.1 2.1 0 0 1 12.9 8A2.1 2.1 0 0 1 15 5.9M4 7v3H1v2h3v3h2v-3h3v-2H6V7zm11 6c-2.67 0-8 1.33-8 4v3h16v-3c0-2.67-5.33-4-8-4m0 1.9c2.97 0 6.1 1.46 6.1 2.1v1.1H8.9V17c0-.64 3.1-2.1 6.1-2.1" />
                             </svg>
                         </a>
-                        <a href="register.html" class="btn btn-warning">Log in
+                        <a href="register.html" class="button button-warning rounded-pill">Log in
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" class="ms-2">
                                 <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="2">
                                     <path d="M12 20a8 8 0 1 0 0-16" />
