--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -7,7 +7,7 @@
                     <div class="hero-text">
                         <h2>Best <span>Online</span> Platform to Learn Everything</h2>
                         <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
-                        <a href="html/course-1.html" class="btn btn-primary">
+                        <a href="html/course-1.html" class="button button-primary">
                             <span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2" d="m14 16l4-4m0 0l-4-4m4 4H6" />
