--- a/src/html/layouts/navbar.html
+++ b/src/html/layouts/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg">
     <div class="container">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#primaryNavbarMenu"
             aria-controls="primaryNavbarMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,6 +59,8 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="html/about.html">About</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="html/contact-us.html">Contact</a>
                 </li>
             </ul>
@@ -71,7 +73,7 @@
                     <a href="mailto:ahmed.elsewailky@gmail.com" class="mail">support@gmail.com</a>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="shopping-cart">
+                    <button type="button" class="button shopping-cart">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
                                 <path d="M6.331 8H17.67a2 2 0 0 1 1.977 2.304l-1.255 8.152A3 3 0 0 1 15.426 21H8.574a3 3 0 0 1-2.965-2.544l-1.255-8.152A2 2 0 0 1 6.331 8" />
@@ -82,7 +84,7 @@
                     </button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="sidebar-info-button">
+                    <button type="button" class="button sidebar-info-button">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M22 18.005c0 .55-.446.995-.995.995h-8.01a.995.995 0 0 1 0-1.99h8.01c.55 0 .995.445.995.995M22 12c0 .55-.446.995-.995.995H2.995a.995.995 0 1 1 0-1.99h18.01c.55 0 .995.446.995.995m-.995-5.01a.995.995 0 0 0 0-1.99H8.995a.995.995 0 1 0 0 1.99z" />
                         </svg>
