--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -1,236 +1,2 @@
-:root {
-  --primary-color: #5352ed;
-  --primary-hover: rgb(37.0732984293, 35.8062827225, 232.1937172775);
-  --warning-color: #ff7f50;
-  --warning-hover: rgb(255, 89.6971428571, 29);
-  --success-color: #2ed573;
-  --success-hover: rgb(34.8047808765, 173.1952191235, 91.984063745);
-  --danger-color: #ff4757;
-  --danger-hover: rgb(255, 20, 40.4347826087);
-  --dark-color: #000000;
-  --dark-hover: hsl(0, 0%, -10%);
-  --light-color: #a4b0be;
-  --light-hover: rgb(134.25, 150.1730769231, 168.75);
-  --info-color: #1e90ff;
-  --info-hover: rgb(0, 118.56, 234);
-}
-
-body {
-  font-size: 15px;
-  font-family: "Poppins", "Changa", sans-serif;
-  font-weight: 500;
-  background-color: whitesmoke;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-span {
-  display: inline-block;
-}
-
-.button {
-  background-color: transparent;
-  border: none;
-  padding: 14px 18px;
-  display: inline-flex;
-  align-items: center;
-}
-.button-primary {
-  background-color: #5352ed;
-  color: white;
-}
-.button-primary:hover {
-  color: white;
-  background-color: hsl(240.3870967742, 81.1518324607%, -37.4509803922%);
-}
-.button-gradient-primary {
-  background: linear-gradient(180deg, #5352ed, rgb(19.0497382199, 18.0471204188, 173.4528795812));
-}
-.button-gradient-primary:hover {
-  color: white;
-  background: linear-gradient(135deg, rgb(128.9267015707, 128.1937172775, 241.8062827225), #5352ed);
-}
-.button-warning {
-  background-color: #ff7f50;
-  color: white;
-}
-.button-warning:hover {
-  color: white;
-  background-color: hsl(16.1142857143, 100%, -34.3137254902%);
-}
-.button-gradient-warning {
-  background: linear-gradient(180deg, #ff7f50, rgb(207.5, 55.7285714286, 0));
-}
-.button-gradient-warning:hover {
-  color: white;
-  background: linear-gradient(135deg, rgb(255, 164.3028571429, 131), #ff7f50);
-}
-.button-success {
-  background-color: #2ed573;
-  color: white;
-}
-.button-success:hover {
-  color: white;
-  background-color: hsl(144.7904191617, 66.5338645418%, -49.2156862745%);
-}
-.button-gradient-success {
-  background: linear-gradient(180deg, #2ed573, rgb(22.0039840637, 109.4960159363, 58.1533864542));
-}
-.button-gradient-success:hover {
-  color: white;
-  background: linear-gradient(135deg, rgb(88.4661354582, 221.5338645418, 143.4462151394), #2ed573);
-}
-.button-danger {
-  background-color: #ff4757;
-  color: white;
-}
-.button-danger:hover {
-  color: white;
-  background-color: hsl(354.7826086957, 100%, -36.0784313725%);
-}
-.button-gradient-danger {
-  background: linear-gradient(180deg, #ff4757, rgb(198.5, 0, 17.2608695652));
-}
-.button-gradient-danger:hover {
-  color: white;
-  background: linear-gradient(135deg, rgb(255, 122, 133.5652173913), #ff4757);
-}
-.button-dark {
-  background-color: #000000;
-  color: white;
-}
-.button-dark:hover {
-  color: white;
-  background-color: hsl(0, 0%, -100%);
-}
-.button-gradient-dark {
-  background: linear-gradient(180deg, #000000, hsl(0, 0%, -25%));
-}
-.button-gradient-dark:hover {
-  color: white;
-  background: linear-gradient(135deg, rgb(25.5, 25.5, 25.5), #000000);
-}
-.button-light {
-  background-color: #a4b0be;
-  color: white;
-}
-.button-light:hover {
-  color: white;
-  background-color: hsl(212.3076923077, 16.6666666667%, -30.5882352941%);
-}
-.button-gradient-light {
-  background: linear-gradient(180deg, #a4b0be, rgb(94.375, 111.7980769231, 132.125));
-}
-.button-gradient-light:hover {
-  color: white;
-  background: linear-gradient(135deg, rgb(193.75, 201.8269230769, 211.25), #a4b0be);
-}
-.button-info {
-  background-color: #1e90ff;
-  color: white;
-}
-.button-info:hover {
-  color: white;
-  background-color: hsl(209.6, 100%, -44.1176470588%);
-}
-.button-gradient-info {
-  background: linear-gradient(180deg, #1e90ff, rgb(0, 79.8, 157.5));
-}
-.button-gradient-info:hover {
-  color: white;
-  background: linear-gradient(135deg, rgb(81, 169.16, 255), #1e90ff);
-}
-
-.form-control {
-  border-radius: 0;
-  font-size: 15px;
-}
-.form-control:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-.header {
-  padding: 18px 0;
-}
-.header-logo a {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 24px;
-  letter-spacing: 0.5px;
-}
-.header-logo svg {
-  color: var(--primary-color);
-  width: 40px;
-  height: 32px;
-}
-.header-search {
-  display: flex;
-  border: 1px solid #e5e7eb;
-  padding: 6px 8px;
-  background-color: #fff;
-  border-radius: 50px;
-}
-.header-search > button {
-  background-color: transparent;
-  border: none;
-  flex-shrink: 0;
-}
-.header-search form {
-  display: flex;
-  width: 50%;
-  flex-grow: 1;
-}
-.header-search form .form-control {
-  background-color: transparent;
-  border: none;
-}
-.header-search form button {
-  margin-left: auto;
-}
-.header-auth-buttons {
-  display: flex;
-  justify-content: end;
-}
-.header-auth-buttons a {
-  margin-left: 4px;
-}
-
-.navbar {
-  background-color: white;
-  box-shadow: 0 0 22px rgba(0, 0, 0, 0.1);
-  padding: 16px 0;
-}
-.navbar .nav-link {
-  font-weight: 600;
-  font-size: 16px;
-}
-.navbar a.mail, .navbar a.phone {
-  display: block;
-  padding: 15px 12px;
-}
-.navbar .navbar-nav button span {
-  background-color: #00BCD4;
-  position: absolute;
-  width: 18px;
-  height: 18px;
-  border-radius: 50px;
-  font-size: 13px;
-  color: white;
-  right: 10px;
-  top: 11px;
-}
+:root{--primary-color:#5352ed;--primary-hover:rgb(37.0732984293, 35.8062827225, 232.1937172775);--warning-color:#ff7f50;--warning-hover:rgb(255, 89.6971428571, 29);--success-color:#2ed573;--success-hover:rgb(34.8047808765, 173.1952191235, 91.984063745);--danger-color:#ff4757;--danger-hover:rgb(255, 20, 40.4347826087);--dark-color:#000000;--dark-hover:hsl(0, 0%, -10%);--light-color:#a4b0be;--light-hover:rgb(134.25, 150.1730769231, 168.75);--info-color:#1e90ff;--info-hover:rgb(0, 118.56, 234);--bs-navbar-nav-link-padding-x:1rem}body{font-size:13px;font-family:Poppins,Changa,sans-serif;font-weight:500;background-color:#f5f5f5}a{color:inherit;text-decoration:none}h1,h2,h3,h4,h5,h6,p{margin:0}span{display:inline-block}button{background-color:transparent;border:none}.button{display:inline-flex;align-items:center;border-radius:4px;text-transform:uppercase;padding:12px 20px;font-weight:500;transition:.3s}.button-sm{padding:10px 16px}.button-md{padding:14px 24px}.button-lg{padding:18px 32px}.button-primary{background-color:#5352ed;color:#fff}.button-primary:hover{color:#fff;background-color:rgb(19.0497382199,18.0471204188,173.4528795812)}.button-warning{background-color:coral;color:#fff}.button-warning:hover{color:#fff;background-color:rgb(207.5,55.7285714286,0)}.button-success{background-color:#2ed573;color:#fff}.button-success:hover{color:#fff;background-color:rgb(22.0039840637,109.4960159363,58.1533864542)}.button-danger{background-color:#ff4757;color:#fff}.button-danger:hover{color:#fff;background-color:rgb(198.5,0,17.2608695652)}.button-dark{background-color:#000;color:#fff}.button-dark:hover{color:#fff;background-color:#000}.button-light{background-color:#a4b0be;color:#fff}.button-light:hover{color:#fff;background-color:rgb(94.375,111.7980769231,132.125)}.button-info{background-color:#1e90ff;color:#fff}.button-info:hover{color:#fff;background-color:rgb(0,79.8,157.5)}.tooltip-inner{background-color:var(--dark-color);color:#fff;text-transform:capitalize}.bs-tooltip-top .tooltip-arrow::before{border-top-color:var(--dark-color)}.bs-tooltip-bottom .tooltip-arrow::before{border-bottom-color:var(--dark-color)}.bs-tooltip-start .tooltip-arrow::before{border-left-color:var(--dark-color)}.bs-tooltip-end .tooltip-arrow::before{border-right-color:var(--dark-color)}.bs-tooltip-auto[data-popper-placement^=bottom] .tooltip-arrow::before,.bs-tooltip-bottom .tooltip-arrow::before{border-bottom-color:var(--dark-color)}.form-control{border-radius:0;font-size:13px}.form-control:focus{outline:0;box-shadow:none}.dropdown-menu{border-radius:4px;border:none;box-shadow:0 0 17px rgba(0,0,0,.1)}.dropdown-item{font-size:13px;padding:8px 16px;text-transform:capitalize;transition:.3s ease;color:rgba(0,0,0,.5)}.dropdown-item.active,.dropdown-item:active,.dropdown-item:hover{color:#000;padding-left:1.5rem;background-color:transparent}.search-category-list{width:180px}.search-category-list svg{margin-right:12px;width:22px}.dropdown-item.primary svg{color:#5352ed}.dropdown-item.warning svg{color:coral}.dropdown-item.success svg{color:#2ed573}.dropdown-item.danger svg{color:#ff4757}.dropdown-item.dark svg{color:#000}.dropdown-item.light svg{color:#a4b0be}.dropdown-item.info svg{color:#1e90ff}.header{padding:18px 0}.header-logo a{font-weight:700;font-size:24px;letter-spacing:.5px}.header-logo svg{width:40px;height:32px;color:var(--primary-color)}.header-search-area{display:flex;align-items:center;border:1px solid #e5e7eb;padding:6px 8px;background-color:#fff;border-radius:4px}.header-social-links .nav{justify-content:end}.header-social-links a{padding:0 8px}.header-social-links svg{width:20px;color:var(--dark-color,#000)}.header-auth{display:flex;align-items:center;justify-content:flex-end;border-left:1px solid rgba(163,163,163,.5);position:relative}.header-auth::after{position:absolute;content:"";border:4px solid;border-color:#1d1d1d transparent transparent;left:16px;top:50%;transform:translateY(-50%)}.header-auth .auth{display:flex;align-items:center}.header-auth .auth .auth-image{flex-shrink:0;margin-left:16px}.header-auth .auth .auth-image img{width:38px;height:38px;border-radius:50%;-o-object-fit:cover;object-fit:cover}.header-auth .auth .auth-info{flex-grow:1;font-size:13px;text-align:right}.header-auth .auth .auth-info h6{font-size:15px;margin-bottom:4px;text-transform:capitalize}.header-auth .auth .auth-info span{font-size:12px;font-weight:300}.navbar{background-color:#fff;box-shadow:0 0 22px rgba(0,0,0,.1);padding:16px 0}.navbar .nav-link{font-weight:600;font-size:14px;text-transform:uppercase}.navbar a.mail,.navbar a.phone{display:block;padding:15px 12px}.navbar .navbar-nav button span{background-color:#00bcd4;position:absolute;width:18px;height:18px;border-radius:50px;font-size:13px;color:#fff;right:10px;top:11px}
 /*# sourceMappingURL=style.css.map */
