--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -5,7 +5,8 @@
 
     .nav-link {
         font-weight: 600;
-        font-size: 16px;
+        font-size: 14px;
+        text-transform: uppercase;
     }
 
     a.mail, a.phone {
