--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -2,59 +2,93 @@
 
 .header {
     padding: 18px 0;
+}
 
-    &-logo {
-        a {
-            text-transform: uppercase;
-            font-weight: 700;
-            font-size: 24px;
-            letter-spacing: 0.5px;
+.header-logo {
+    a {
+        font: {
+            weight: 700;
+            size: 24px;
         }
-
-        svg {
-            color: var(--primary-color);
-            width: 40px;
-            height: 32px;
-        }
+        letter-spacing: 0.5px;
     }
 
-    &-search {
-        display: flex;
-        border: 1px solid $borderColor;
-        padding: 6px 8px;
-        background-color: #fff;
-        border-radius: 50px;
+    svg {
+        width: 40px;
+        height: 32px;
+        color: var(--primary-color);
+    }
+}
 
-        >button {
-            background-color: transparent;
-            border: none;
+.header-search-area {
+    display: flex;
+    align-items: center;
+    border: 1px solid $borderColor;
+    padding: 6px 8px;
+    background-color: #fff;
+    border-radius: $borderRaduis;
+}
+
+.header-social-links {
+    .nav {justify-content: end;}
+    a {
+        padding: 0 8px;
+    }
+    svg {
+        width: 20px;
+        color: var(--dark-color, #000);
+    }
+}
+
+.header-auth {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    border-left: 1px solid rgba(163, 163, 163, 0.5);
+    position: relative;
+
+    &::after {
+        position: absolute;
+        content: '';
+        border: 4px solid;
+        border-color: rgb(29, 29, 29) transparent transparent;
+        left: 16px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    .auth {
+        display: flex;
+        align-items: center;
+
+        .auth-image {
             flex-shrink: 0;
+            margin-left: 16px;
+
+            img {
+                $avatar-size: 38px; 
+                width: $avatar-size;
+                height: $avatar-size;
+                border-radius: 50%;
+                object-fit: cover;
+            }
         }
 
-        form {
-            display: flex;
-            width: 50%;
+        .auth-info {
             flex-grow: 1;
+            font-size: 13px;
+            text-align: right;
 
-            .form-control {
-                background-color: transparent;
-                border: none;
+            h6 {
+                font-size: 15px;
+                margin-bottom: 4px;
+                text-transform: capitalize;
             }
 
-            button {
-
-                margin-left: auto;
+            span {
+                font-size: 12px;
+                font-weight: 300;
             }
-        }
-    }
-
-    &-auth-buttons {
-        display: flex;
-        justify-content: end;
-
-        a {
-
-            margin-left: 4px;
         }
     }
 }
