--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="hero-section-inner">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 align-self-center">
                     <div class="hero-text">
                         <h2>Best <span>Online</span> Platform to Learn Everything</h2>
                         <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
@@ -19,14 +19,10 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="hero-image">
-                        <img src="@@BASE_URL/assets/images/hero-img.png" alt="Hero image preview">
+                        <img src="@@BASE_URL/assets/images/hero-img.png" data-speed="8" class="floating-img" alt="Hero image preview">
                     </div>
                 </div>
             </div>
-            <img src="@@BASE_URL/assets/images/abstracts/abstract-dots-1.svg" alt="Hero image preview">
-            <img src="@@BASE_URL/assets/images/abstracts/abstract-red-plus-1.svg" alt="Hero image preview">
-            <img src="@@BASE_URL/assets/images/abstracts/element-book-1.svg" alt="Hero image preview">
-            <img src="@@BASE_URL/assets/images/abstracts/element-crown-1.svg" alt="Hero image preview">
         </div>
     </div>
 </div>
