--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -3,9 +3,25 @@
     box-shadow: 0 0 22px rgb(0 0 0 / 10%);
     padding: 8px 0;
 
+    .dropdown-menu {
+        display: block;
+        transition: 0.3s;
+        transform: translateY(10px);
+        visibility: hidden;
+        opacity: 0;
+    }
+
+    .dropdown:hover > .dropdown-menu {
+        cursor: pointer;
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+    }
+
     .nav-link {
         font-weight: 600;
         text-transform: uppercase;
+        pointer-events: none;
     }
 
     span.count {
@@ -23,7 +39,7 @@
     .shopping-cart {
         position: relative;
     }
-    
+
     .shopping-cart span {
         background-color: var(--primary-color);
         color: white;
