--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,9 +1,16 @@
 @use '../abstracts/variables' as *;
 
 .app-header {
-    background: linear-gradient(45deg,#f2f1e2,#dcecdd);
-    height: 100vh;
-    z-index: 1;
+    position: relative;
+}
+
+.app-header::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, #f2f1e2, #dcecdd);
+    z-index: -1;
 }
 
 .header {
